--- a/sponsors.html
+++ b/sponsors.html
@@ -1,110 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="client-nojs">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/bootstrap-theme?action=raw&amp;ctype=text/css">
-  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css">
-  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css">
-  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css">
-  <title>Bergen County Academies - iGEM</title>
-  <script src="https://2015.igem.org/Team:OUC-China/js/jquery-1-11-1-min?action=raw&amp;ctype=text/javascript"></script>
-  <script type="text/javascript" src="https://2015.igem.org/Team:OUC-China/js/index?action=raw&amp;ctype=text/javascript"></script>
-  <script type="text/javascript" src="https://2015.igem.org/Team:OUC-China/js/bootstrap?action=raw&amp;ctype=text/javascript"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
+    />
+    <title>Bergen County Academies - iGEM</title>
+    <link rel="stylesheet" href="sponsors.css" />
+  </head>
 
-  <style>
-    .banner-top{
-      margin-left: 24%;
-    }
-    @media (min-width: 992px){
-      .work-content .col-md-4{
-        width:25%;
-        margin-right: 8%;
-      }
-    }
-    .crop {
-      width: 650px;
-      height: 650px;
-      overflow: hidden;
-    }
+  <body>
+    <br />
+    <header class="header">
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <span class="menu"> Menu</span>
+          <div class="banner-top">
+            <ul class="nav banner-nav">
+              <li class="dropdown1">
+                <a class="down-scroll" href="index.html">HOME</a>
+              </li>
+              <li class="dropdown1">
+                <a class="down-scroll" href="project.html">PROJECT</a>
+              </li>
+              <li class="dropdown1">
+                <a class="down-scroll" href="sponsors.html">SPONSORS</a>
+              </li>
+              <li class="dropdown1">
+                <a class="down-scroll" href="aboutus.html">ABOUT US</a>
+              </li>
+              <li class="dropdown1">
+                <a class="down-scroll" href="contact.html">CONTACT</a>
+              </li>
+            </ul>
 
-    .crop img {
-      width: 650px;
-      height: 650px;
-      margin: -200px 200px 200px -200px;
-    }
-    #contentSub, #contentcontainer, #footer-box, #sitesub, #catlinks, #search-controls, #p-logo, .h3, .printfooter, .firstHeading, .visualClear {display: none;} /*-- hides default wiki settings --*/
-
-    #globalWrapper, #content { /*-- changes default wiki settings --*/
-      width: 100%; 
-      height: 100%;
-      border: 0px;
-      background-color: transparent;
-      margin: 0px;
-      padding: 0px;
-    }
-    /* disable IGEM's style */
-    /*#bodyContent h1, #bodyContent h2, #bodyContent h3, #bodyContent h4, #bodyContent h5, #bodyContent h6 {
-      border-bottom: none;
-      padding-top: 0;
-      padding-bottom: 0;
-      margin-bottom: 0;
-    }
-    #bodyContent p {
-      font-size: 100%;
-      line-height: 1em;
-    }
-    #bodyContent li {
-      margin-bottom: 0;
-    }
-    #bodyContent a {
-      font-size: 100%;
-    }*/
-
-  </style>
-</head>
-
-<body>
-  <br>
-  <header class="header">
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <span class="menu"> Menu</span>
-        <div class="banner-top">
-          <ul class="nav banner-nav">
-            <li class="dropdown1"><a class="down-scroll" href="index.html">HOME</a>
-            <li class="dropdown1"><a class="down-scroll" href="project.html">PROJECT</a>
-            <li class="dropdown1"><a class="down-scroll" href="sponsors.html">SPONSORS</a>
-            <li class="dropdown1"><a class="down-scroll" href="aboutus.html">ABOUT US</a>
-            <li class="dropdown1"><a class="down-scroll"  href="contact.html">CONTACT</a>
-          </ul>
-          <script>
-          $("span.menu").click(function() {
-            $(" ul.nav").slideToggle("slow", function() {});
-          });
-          </script>
+            <script>
+              $("span.menu").click(function () {
+                $(" ul.nav").slideToggle("slow", function () {});
+              });
+            </script>
+          </div>
+          <div class="clearfix"></div>
         </div>
-        <div class="clearfix"> </div>
-      </div>
-      <!-- /.container-fluid -->
-    </nav>
-  </header>
-  <div class="banner-container">
-    <div class="banner-content">
-      <h2>Sponsors</h2>
-    </div>
-  </div>
-  <div class="container-fluid how-work">
-    <div class="container">
-      <div class="work-header">
-        <h2 class="text-uppercase">
-          <span>Sponsors</span>
-        </h2>
-        <p>
-          Thank you to our sponsors!
-        </p>
+        <!-- /.container-fluid -->
+      </nav>
+    </header>
+    <div class="banner-container">
+      <div class="banner-content">
+        <h2>Sponsors</h2>
       </div>
     </div>
-  </div>
-</body>
-
+    <div class="container-fluid how-work">
+      <div class="container">
+        <div class="work-header">
+          <h2 class="text-uppercase">
+            <span>Sponsors</span>
+          </h2>
+          <p>Thank you to our sponsors!</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
