Updated CSS and HTML

--- a/contact.html
+++ b/contact.html
@@ -1,75 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="client-nojs">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
-    />
-    <title>Bergen County Academies - iGEM</title>
-    <link rel="stylesheet" href="contact.css" />
-  </head>
-  <body>
-    <br />
-    <header class="header">
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <span class="menu"> Menu</span>
-          <div class="banner-top">
-            <ul class="nav banner-nav">
-              <li class="dropdown1">
-                <a class="down-scroll" href="index.html">HOME</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="project.html">PROJECT</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="sponsors.html">SPONSORS</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="aboutus.html">ABOUT US</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="contact.html">CONTACT</a>
-              </li>
-            </ul>
-
-            <script>
-              $("span.menu").click(function () {
-                $(" ul.nav").slideToggle("slow", function () {});
-              });
-            </script>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <!-- /.container-fluid -->
-      </nav>
-    </header>
-    <div class="banner-container">
-      <div class="banner-content">
-        <h2>Project</h2>
-      </div>
-    </div>
-    <div class="container-fluid how-work">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css" />
+  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css" />
+  <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css" />
+  <title>Bergen County Academies - iGEM</title>
+  <link rel="stylesheet" href="contact.css" />
+</head>
+<body>
+  <header class="header">
+    <nav class="navbar navbar-default">
       <div class="container">
-        <div class="work-header">
-          <h2 class="text-uppercase">
-            <span>Contact</span>
-          </h2>
-          <p>
-            email:
-            <a href="mailto:bcaigem@gmail.com"> bcaigem@gmail.com </a>
-          </p>
+        <span class="menu">Menu</span>
+        <div class="banner-top">
+          <ul class="nav banner-nav">
+            <li class="dropdown1"><a class="down-scroll" href="index.html">HOME</a></li>
+            <li class="dropdown1"><a class="down-scroll" href="project.html">PROJECT</a></li>
+            <li class="dropdown1"><a class="down-scroll" href="sponsors.html">SPONSORS</a></li>
+            <li class="dropdown1"><a class="down-scroll" href="aboutus.html">ABOUT US</a></li>
+            <li class="dropdown1"><a class="down-scroll" href="contact.html">CONTACT</a></li>
+          </ul>
         </div>
+        <div class="clearfix"></div>
+      </div>
+    </nav>
+  </header>
+  <div class="banner-container">
+    <div class="banner-content">
+      <h2>Project</h2>
+    </div>
+  </div>
+  <div class="container-fluid how-work">
+    <div class="container">
+      <div class="work-header">
+        <h2 class="text-uppercase">Contact</h2>
+        <p>email: <a href="mailto:bcaigem@gmail.com">bcaigem@gmail.com</a></p>
+        <p>Visit us on Instagram: <a href="https://www.instagram.com/bca.igem" target="_blank">bca.igem</a></p>
       </div>
     </div>
-  </body>
+  </div>
+  <script>
+    $("span.menu").click(function () {
+      $(" ul.nav").slideToggle("slow", function () {});
+    });
+  </script>
+</body>
 </html>
