modified about us page
worked with victor

--- a/aboutus.html
+++ b/aboutus.html
@@ -65,23 +65,25 @@
           <h2 class="text-uppercase">About <span>Us</span></h2>
           <p>
             We are the 2024 iGEM Team representing Bergen County Academies, a
-            unique public magnet high school that offers students across Bergen
+            public magnet high school that offers students across Bergen
             County, New Jersey career-focused educational opportunities. The
             International Genetically Engineered Machine (iGEM) Competition is a
             global synthetic biology competition. This year, the Bergen County
             Academies iGEM team is genetically modifying bacteria to fight
             cancer! Our team at BCA consists of students of diverse backgrounds
-            and different focuses. We are highly driven high schoolers who are
-            using synthetic biology to address important issues in our world.
-            <center>
-              <img
-                src="images/members/MuhammadE.jpg"
-                width="500"
-                alt="Muhammad E"
-              />
-            </center>
-            <bold>Muhammad El-Sherbiny: President & Founder</bold>
+            and different focuses. 
           </p>
+          <h3 class="foundertag"><bold>Muhammad El-Sherbiny: President & Founder</bold></h3>
+          <div class="founder">
+            <img class="images" 
+            src="images/members/MuhammadE.jpg"
+            width="500"
+            alt="Muhammad E" />
+          </div>
+          <h2> The Engineering Team</h2> 
+          <h2> The Biology Team</h2>
+          <h2> The Logistics Team </h2>
+
         </div>
       </div>
     </div>
