--- a/project.html
+++ b/project.html
@@ -64,14 +64,25 @@
           <h2 class="text-uppercase">
             <span>Project</span>
           </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
+          <p><b>
+            Innovative Approach in Cancer Treatment: Novel Iron-binding and Quorum Sensing Circuit for Precise Magnetic Hyperthermia.</b>
           </p>
+            <br>
+          <p>
+            In the quest for more effective cancer treatments, a project is underway, harnessing the power of novel technologies and biological mechanisms. Introducing a pioneering method: the Iron-binding and Quorum Sensing Circuit for Precise Magnetic Hyperthermia Cancer Treatment.
+
+At the heart of this innovative approach lies the utilization of iron oxide nanoparticles (IONPs) ranging between 10-100nm in size. These nanoparticles, when subjected to an alternating magnetic field (AMF), exhibit controllable heating properties. By elevating the temperature of the tumor microenvironment (TME) to a range of 45-47°C, targeted destruction of cancer cells becomes feasible.
+
+However, a significant challenge arises in precisely delivering these IONPs to the tumor site while minimizing off-target effects. To address this, the project proposes a multifaceted solution inspired by existing research, particularly from *Tal Denino's TED Talk on bacterial accumulation in TME.
+
+The proposed system ingeniously capitalizes on the natural behavior of bacteria in the tumor environment. As bacteria accumulate in the TME, a quorum sensing mechanism is activated. Upon reaching a critical density, this triggers the expression of an iron-binding protein by the bacteria. Subsequently, when IONPs are administered, they selectively bind to these bacteria already congregated at the tumor site.
+
+This strategic binding mechanism sets the stage for precise and localized treatment. With the IONPs securely anchored to the bacteria within the tumor, exposure to a specific frequency of AMF initiates controlled heating solely within the targeted region. This targeted hyperthermia effectively eradicates cancer cells while minimizing damage to healthy surrounding tissue.
+
+In essence, the Novel Iron-binding and Quorum Sensing Circuit for Precise Magnetic Hyperthermia Cancer Treatment project represents a fusion of cutting-edge nanotechnology, biological engineering, and innovative circuitry. By leveraging the symbiotic relationship between nanoparticles, bacteria, and quorum sensing mechanisms, it opens new avenues for highly precise and effective cancer therapies, offering hope for improved outcomes and enhanced patient well-being.
+
+          </p>
+          
         </div>
       </div>
     </div>
