--- a/aboutus.html
+++ b/aboutus.html
@@ -80,7 +80,48 @@
             width="500"
             alt="Muhammad E" />
           </div>
-          <h2> The Engineering Team</h2> 
+          <h2> The Engineering Team</h2>
+          <div>  
+            <div class="container">
+              <div class="bio-box">
+                  <div class="profile-picture">
+                      <img src="person1.jpg" alt="Profile Picture">
+                  </div>
+                  <div class="name">
+                      <h3>Hemang Mittal</h3>
+                  </div>
+                  <div class="bio-text">
+                      <p>Hey, I’m Hemang and I’m a sophomore in the Engineering Academy (AEDT) at Bergen County Academies. I joined iGEM because I thought it would be a fun and interesting experience that applies engineering concepts to a project that reaches natural sciences. Outside of iGEM, I do debate, play the bass clarinet, and work on some of my own engineering projects. 
+                      </p>
+                  </div>
+              </div>
+              <div class="bio-box">
+                  <div class="profile-picture">
+                      <img src="person2.jpg" alt="Profile Picture">
+                  </div>
+                  <div class="name">
+                      <h3>Raunak Singh</h3>
+                  </div>
+                  <div class="bio-text">
+                      <p>Hello, I am Raunak Singh, a sophomore in the Engineering Academy. My passion for research, programming, and science drives me to advance synthetic biology as part of our iGEM team. Beyond iGEM, I enjoy playing the violin, reading, and swimming.
+                      </p>
+                  </div>
+              </div>
+              <div class="bio-box">
+                  <div class="profile-picture">
+                      <img src="person3.jpg" alt="Profile Picture">
+                  </div>
+                  <div class="name">
+                      <h3>Xinyang He</h3>
+                  </div>
+                  <div class="bio-text">
+                      <p>Hello, I’m Xinyang and I’m a sophomore in the Engineering Academy (AEDT) in the Class of 2026. I joined iGEM because I’m interested in collaborative research and applying engineering to synthetic biology. Outside of iGEM, I run cross country, participate in competitive programming, and play the piano.
+                      </p>
+                  </div>
+              </div>
+          </div>
+              
+          </div>
           <h2> The Biology Team</h2>
           <h2> The Logistics Team </h2>
 
