--- a/aboutus.html
+++ b/aboutus.html
@@ -1,132 +1,182 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="client-nojs">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
-    />
-    <title>Bergen County Academies - iGEM</title>
-    <link rel="stylesheet" href="aboutus.css" />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
+        />
+        <title>Bergen County Academies - iGEM</title>
+        <link rel="stylesheet" href="aboutus.css" />
+        <link rel="stylesheet" href="project.css" />
+    </head>
 
-  <body>
-    <br />
-    <header class="header">
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <span class="menu"> Menu</span>
-          <div class="banner-top">
-            <ul class="nav banner-nav">
-              <li class="dropdown1">
-                <a class="down-scroll" href="index.html">HOME</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="project.html">PROJECT</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="sponsors.html">SPONSORS</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="aboutus.html">ABOUT US</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="contact.html">CONTACT</a>
-              </li>
-            </ul>
+    <body>
+        <br />
+        <header class="header">
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <span class="menu"> Menu</span>
+                    <div class="banner-top">
+                        <ul class="nav banner-nav">
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="index.html"
+                                    >HOME</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="project.html"
+                                    >PROJECT</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="sponsors.html"
+                                    >SPONSORS</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="aboutus.html"
+                                    >ABOUT US</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="contact.html"
+                                    >CONTACT</a
+                                >
+                            </li>
+                        </ul>
 
-            <script>
-              $("span.menu").click(function () {
-                $(" ul.nav").slideToggle("slow", function () {});
-              });
-            </script>
-          </div>
-          <div class="clearfix"></div>
+                        <script>
+                            $("span.menu").click(function () {
+                                $(" ul.nav").slideToggle(
+                                    "slow",
+                                    function () {}
+                                );
+                            });
+                        </script>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </nav>
+        </header>
+        <div class="banner-container">
+            <div class="banner-content">
+                <h2>About Us</h2>
+            </div>
         </div>
-        <!-- /.container-fluid -->
-      </nav>
-    </header>
-    <div class="banner-container">
-      <div class="banner-content">
-        <h2>About Us</h2>
-      </div>
-    </div>
-    <div class="container-fluid how-work">
-      <div class="container">
-        <div class="work-header">
-          <h2 class="text-uppercase">About <span>Us</span></h2>
-          <p>
-            We are the 2024 iGEM Team representing Bergen County Academies, a
-            public magnet high school that offers students across Bergen
-            County, New Jersey career-focused educational opportunities. The
-            International Genetically Engineered Machine (iGEM) Competition is a
-            global synthetic biology competition. This year, the Bergen County
-            Academies iGEM team is genetically modifying bacteria to fight
-            cancer! Our team at BCA consists of students of diverse backgrounds
-            and different focuses. 
-          </p>
-          <h3 class="foundertag"><bold>Muhammad El-Sherbiny: President & Founder</bold></h3>
-          <div class="founder">
-            <img class="images" 
-            src="images/members/MuhammadE.jpg"
-            width="500"
-            alt="Muhammad E" />
-          </div>
-          <h2> The Engineering Team</h2>
-          <div>  
+        <div class="container-fluid how-work">
             <div class="container">
-              <div class="bio-box">
-                  <div class="profile-picture">
-                      <img src="person1.jpg" alt="Profile Picture">
-                  </div>
-                  <div class="name">
-                      <h3>Hemang Mittal</h3>
-                  </div>
-                  <div class="bio-text">
-                      <p>Hey, I’m Hemang and I’m a sophomore in the Engineering Academy (AEDT) at Bergen County Academies. I joined iGEM because I thought it would be a fun and interesting experience that applies engineering concepts to a project that reaches natural sciences. Outside of iGEM, I do debate, play the bass clarinet, and work on some of my own engineering projects. 
-                      </p>
-                  </div>
-              </div>
-              <div class="bio-box">
-                  <div class="profile-picture">
-                      <img src="person2.jpg" alt="Profile Picture">
-                  </div>
-                  <div class="name">
-                      <h3>Raunak Singh</h3>
-                  </div>
-                  <div class="bio-text">
-                      <p>Hello, I am Raunak Singh, a sophomore in the Engineering Academy. My passion for research, programming, and science drives me to advance synthetic biology as part of our iGEM team. Beyond iGEM, I enjoy playing the violin, reading, and swimming.
-                      </p>
-                  </div>
-              </div>
-              <div class="bio-box">
-                  <div class="profile-picture">
-                      <img src="person3.jpg" alt="Profile Picture">
-                  </div>
-                  <div class="name">
-                      <h3>Xinyang He</h3>
-                  </div>
-                  <div class="bio-text">
-                      <p>Hello, I’m Xinyang and I’m a sophomore in the Engineering Academy (AEDT) in the Class of 2026. I joined iGEM because I’m interested in collaborative research and applying engineering to synthetic biology. Outside of iGEM, I run cross country, participate in competitive programming, and play the piano.
-                      </p>
-                  </div>
-              </div>
-          </div>
-              
-          </div>
-          <h2> The Biology Team</h2>
-          <h2> The Logistics Team </h2>
-
+                <div class="work-header">
+                    <h2 class="text-uppercase">About <span>Us</span></h2>
+                    <p>
+                        We are the 2024 iGEM Team representing Bergen County
+                        Academies, a public magnet high school that offers
+                        students across Bergen County, New Jersey career-focused
+                        educational opportunities. The International Genetically
+                        Engineered Machine (iGEM) Competition is a global
+                        synthetic biology competition. This year, the Bergen
+                        County Academies iGEM team is genetically modifying
+                        bacteria to fight cancer! Our team at BCA consists of
+                        students of diverse backgrounds and different focuses.
+                    </p>
+                    <h3 class="foundertag">
+                        <bold>Muhammad El-Sherbiny: President & Founder</bold>
+                    </h3>
+                    <div class="founder">
+                        <img
+                            class="images"
+                            src="images/members/MuhammadE.jpg"
+                            width="500"
+                            alt="Muhammad E"
+                        />
+                    </div>
+                    <h2>The Engineering Team</h2>
+                    <div>
+                        <div class="container">
+                            <div class="bio-box">
+                                <div class="profile-picture">
+                                    <img
+                                        src="person1.jpg"
+                                        alt="Profile Picture"
+                                    />
+                                </div>
+                                <div class="name">
+                                    <h3>Hemang Mittal</h3>
+                                </div>
+                                <div class="bio-text">
+                                    <p>
+                                        Hey, I’m Hemang and I’m a sophomore in
+                                        the Engineering Academy (AEDT) at Bergen
+                                        County Academies. I joined iGEM because
+                                        I thought it would be a fun and
+                                        interesting experience that applies
+                                        engineering concepts to a project that
+                                        reaches natural sciences. Outside of
+                                        iGEM, I do debate, play the bass
+                                        clarinet, and work on some of my own
+                                        engineering projects.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="bio-box">
+                                <div class="profile-picture">
+                                    <img
+                                        src="person2.jpg"
+                                        alt="Profile Picture"
+                                    />
+                                </div>
+                                <div class="name">
+                                    <h3>Raunak Singh</h3>
+                                </div>
+                                <div class="bio-text">
+                                    <p>
+                                        Hello, I am Raunak Singh, a sophomore in
+                                        the Engineering Academy. My passion for
+                                        research, programming, and science
+                                        drives me to advance synthetic biology
+                                        as part of our iGEM team. Beyond iGEM, I
+                                        enjoy playing the violin, reading, and
+                                        swimming.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="bio-box">
+                                <div class="profile-picture">
+                                    <img
+                                        src="person3.jpg"
+                                        alt="Profile Picture"
+                                    />
+                                </div>
+                                <div class="name">
+                                    <h3>Xinyang He</h3>
+                                </div>
+                                <div class="bio-text">
+                                    <p>
+                                        Hello, I’m Xinyang and I’m a sophomore
+                                        in the Engineering Academy (AEDT) in the
+                                        Class of 2026. I joined iGEM because I’m
+                                        interested in collaborative research and
+                                        applying engineering to synthetic
+                                        biology. Outside of iGEM, I run cross
+                                        country, participate in competitive
+                                        programming, and play the piano.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <h2>The Biology Team</h2>
+                    <h2>The Logistics Team</h2>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
