--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Bergen County Academies - iGEM</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="bcaigemlogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="project.css" />
     <style>
       * {
         box-sizing: border-box;
