--- a/sponsors.html
+++ b/sponsors.html
@@ -16,6 +16,7 @@
     />
     <title>Bergen County Academies - iGEM</title>
     <link rel="stylesheet" href="sponsors.css" />
+    <link rel="stylesheet" href="project.css" />
   </head>
 
   <body>
