--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css" />
   <title>Bergen County Academies - iGEM</title>
   <link rel="stylesheet" href="contact.css" />
+  <link rel="stylesheet" href="project.css" />
 </head>
 <body>
   <header class="header">
