--- a/aboutus.html
+++ b/aboutus.html
@@ -88,8 +88,9 @@
                         students of diverse backgrounds and different focuses.
                     </p>
                     <h3 class="foundertag">
-                        <bold>Muhammad El-Sherbiny: President & Founder</bold>
+                        <bold>Founders: Muhammad El Sherbiny & Nicholas Ye</bold>
                     </h3>
+                <div class="container">
                     <div class="founder">
                         <img
                             class="images"
@@ -98,6 +99,15 @@
                             alt="Muhammad E"
                         />
                     </div>
+                    <div class="founder">
+                      <img
+                          class="images"
+                          src="images/members/MuhammadE.jpg"
+                          width="500"
+                          alt="Muhammad E"
+                      />
+                  </div>
+                  </div>
                     <h2>The Engineering Team</h2>
                     <div>
                         <div class="container">
@@ -111,6 +121,7 @@
                                 <div class="name">
                                     <h3>Hemang Mittal</h3>
                                 </div>
+                                    <p><b>Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
                                         Hey, I’m Hemang and I’m a sophomore in
@@ -120,9 +131,8 @@
                                         interesting experience that applies
                                         engineering concepts to a project that
                                         reaches natural sciences. Outside of
-                                        iGEM, I do debate, play the bass
-                                        clarinet, and work on some of my own
-                                        engineering projects.
+                                        iGEM, I do debate and play the bass
+                                        clarinet. 
                                     </p>
                                 </div>
                             </div>
@@ -136,6 +146,7 @@
                                 <div class="name">
                                     <h3>Raunak Singh</h3>
                                 </div>
+                                <p><b>Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
                                         Hello, I am Raunak Singh, a sophomore in
@@ -171,11 +182,282 @@
                                     </p>
                                 </div>
                             </div>
+                            <div class="bio-box">
+                              <div class="profile-picture">
+                                  <img
+                                      src="person3.jpg"
+                                      alt="Profile Picture"
+                                  />
+                              </div>
+                              <div class="name">
+                                  <h3>Logan Yoon</h3>
+                              </div>
+                              <div class="bio-text">
+                                  <p>
+                                    Hey everybody! I’m Logan Yoon, and I’m a sophomore in the engineering academy (AEDT) here at BCA. I joined iGEM in order to learn more about other topics like synthetic biology and collaborate with my peers. Outside of iGEM, I love to play volleyball and listen to music.
+                                  </p>
+                              </div>
+                          </div>
+                          <div class="bio-box">
+                            <div class="profile-picture">
+                                <img
+                                    src="person1.jpg"
+                                    alt="Profile Picture"
+                                />
+                            </div>
+                            <div class="name">
+                                <h3>Danielle Kim</h3>
+                            </div>
+                            <p><b>Promotions Director*</b></p>
+                            <div class="bio-text">
+                                <p>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="bio-box">
+                            <div class="profile-picture">
+                                <img
+                                    src="person2.jpg"
+                                    alt="Profile Picture"
+                                />
+                            </div>
+                            <div class="name">
+                                <h3>Stephen Yoon</h3>
+                            </div>
+                            <div class="bio-text">
+                                <p>
+                                </p>
+                            </div>
+                        </div>
                         </div>
                     </div>
                     <h2>The Biology Team</h2>
-                    <h2>The Logistics Team</h2>
+                    <div class="container">
+                      <div class="bio-box">
+                          <div class="profile-picture">
+                              <img
+                                  src="person1.jpg"
+                                  alt="Profile Picture"
+                              />
+                          </div>
+                          <div class="name">
+                              <h3>Arnav Adepu</h3>
+                          </div>
+                          <div class="bio-text">
+                              <p>
+                              </p>
+                          </div>
+                      </div>
+                      <div class="bio-box">
+                        <div class="profile-picture">
+                            <img
+                                src="person3.jpg"
+                                alt="Profile Picture"
+                            />
+                        </div>
+                        <div class="name">
+                            <h3>Victor Hsu</h3>
+                        </div>
+                        <p><b>Web Developer</b></p>
+                        <div class="bio-text">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                      <div class="bio-box">
+                          <div class="profile-picture">
+                              <img
+                                  src="person2.jpg"
+                                  alt="Profile Picture"
+                              />
+                          </div>
+                          <div class="name">
+                              <h3>Claire Sim</h3>
+                          </div>
+                          <p><b>Outreach Director</b></p>
+                          <div class="bio-text">
+                              <p>
+                              </p>
+                          </div>
+                      </div>
+                      <div class="bio-box">
+                          <div class="profile-picture">
+                              <img
+                                  src="person3.jpg"
+                                  alt="Profile Picture"
+                              />
+                          </div>
+                          <div class="name">
+                              <h3>Claire Jiang</h3>
+                          </div>
+                          <p><b>Communications Director*</b></p>
+                          <div class="bio-text">
+                              <p>
+                              </p>
+                          </div>
+                      </div>
+                      <div class="bio-box">
+                        <div class="profile-picture">
+                            <img
+                                src="person3.jpg"
+                                alt="Profile Picture"
+                            />
+                        </div>
+                        <div class="name">
+                            <h3>Josephine Serrano</h3>
+                        </div>
+                        <p><b>Communications Director</b></p>
+                        <div class="bio-text">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                  </div>
+                  <h2>The Logistics Team </h2>
+                  <div class="container">
+                    <div class="bio-box">
+                        <div class="profile-picture">
+                            <img
+                                src="person1.jpg"
+                                alt="Profile Picture"
+                            />
+                        </div>
+                        <div class="name">
+                            <h3>John Rachko</h3>
+                        </div>
+                        <p><b>Treasurer</b></p>
+                        <div class="bio-text">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="bio-box">
+                        <div class="profile-picture">
+                            <img
+                                src="person2.jpg"
+                                alt="Profile Picture"
+                            />
+                        </div>
+                        <div class="name">
+                            <h3>Anjali Daftary</h3>
+                        </div>
+                        <p><b>Secretary</b></p>
+                        <div class="bio-text">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="bio-box">
+                        <div class="profile-picture">
+                            <img
+                                src="person3.jpg"
+                                alt="Profile Picture"
+                            />
+                        </div>
+                        <div class="name">
+                            <h3>Anna Montali</h3>
+                        </div>
+                        <div class="bio-text">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="bio-box">
+                      <div class="profile-picture">
+                          <img
+                              src="person3.jpg"
+                              alt="Profile Picture"
+                          />
+                      </div>
+                      <div class="name">
+                          <h3>Dana Chung</h3>
+                      </div>
+                      <p><b>Outreach Director</b></p>
+                      <div class="bio-text">
+                          <p>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person3.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Emily Park</h3>
+                    </div>
+                    <div class="bio-text">
+                        <p>
+                        </p>
+                    </div>
                 </div>
+                <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person1.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Ethan Cha</h3>
+                    </div>
+                    <p><b>Web Developer</b></p>
+                    <div class="bio-text">
+                        <p>
+                        </p>
+                    </div>
+                </div>
+                <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person2.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Melanie Shim</h3>
+                    </div>
+                    <div class="bio-text">
+                        <p>
+                        </p>
+                    </div>
+                </div>
+                <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person3.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Tate Kim</h3>
+                    </div>
+                    <div class="bio-text">
+                        <p>
+                        </p>
+                    </div>
+                </div>
+                <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person3.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Elizabeth Ki</h3>
+                    </div>
+                    <p><b>Promotions Director*</b></p>
+                    <div class="bio-text">
+                        <p>
+                        </p>
+                    </div>
+                </div>
+                </div>
+              </div>
+            </div>
             </div>
         </div>
     </body>
