--- a/aboutus.html
+++ b/aboutus.html
@@ -121,6 +121,7 @@
                                 <div class="name">
                                     <h3>Hemang Mittal</h3>
                                 </div>
+                                <p><b>Engineering Lead</b></p>
                                     <p><b>Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
@@ -146,6 +147,7 @@
                                 <div class="name">
                                     <h3>Raunak Singh</h3>
                                 </div>
+                                <p><b>Engineering Lead</b></p>
                                 <p><b>Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
@@ -169,6 +171,7 @@
                                 <div class="name">
                                     <h3>Xinyang He</h3>
                                 </div>
+                                <p><b>Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
                                         Hello, I’m Xinyang and I’m a sophomore
