--- a/aboutus.html
+++ b/aboutus.html
@@ -225,7 +225,7 @@
                             <div class="name">
                                 <h3>Stephen Yoon</h3>
                             </div>
-                            <p><b>Web Developer</b></p>
+                            <p><b>Web Master</b></p>
                             <div class="bio-text">
                                 <p>
                                 </p>
