added soo young yoon as member

--- a/aboutus.html
+++ b/aboutus.html
@@ -457,6 +457,22 @@
                         </p>
                     </div>
                 </div>
+                <div class="bio-box">
+                    <div class="profile-picture">
+                        <img
+                            src="person2.jpg"
+                            alt="Profile Picture"
+                        />
+                    </div>
+                    <div class="name">
+                        <h3>Soo Young Yoon</h3>
+                    </div>
+                    <div class="bio-text">
+                        <p>
+                            Hi, I’m Soo Young, a junior in the science academy. I joined the BCA iGEM because I have a great passion in research and working together as a team. I am in the track team and I like to run in my free time (800 meters is my favorite event) and play frisbee. 
+                        </p>
+                    </div>
+                </div>
                 </div>
               </div>
             </div>
