--- a/aboutus.html
+++ b/aboutus.html
@@ -102,7 +102,7 @@
                     <div class="founder">
                       <img
                           class="images"
-                          src="images/members/MuhammadE.jpg"
+                          src="images/members/NickY.jpeg"
                           width="500"
                           alt="Muhammad E"
                       />
