--- a/aboutus.html
+++ b/aboutus.html
@@ -121,7 +121,7 @@
                                 <div class="name">
                                     <h3>Hemang Mittal</h3>
                                 </div>
-                                    <p><b>Web Developer</b></p>
+                                    <p><b>Engineering Lead & Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
                                         Hey, I’m Hemang and I’m a sophomore in
@@ -146,7 +146,7 @@
                                 <div class="name">
                                     <h3>Raunak Singh</h3>
                                 </div>
-                                <p><b>Web Developer</b></p>
+                                <p><b>Engineering Lead & Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
                                         Hello, I am Raunak Singh, a sophomore in
@@ -245,6 +245,7 @@
                           <div class="name">
                               <h3>Arnav Adepu</h3>
                           </div>
+                          <p><b>Biology Lead</b></p>
                           <div class="bio-text">
                               <p>
                               </p>
