added soo young soon

--- a/aboutus.html
+++ b/aboutus.html
@@ -268,6 +268,7 @@
                             <div class="name">
                                 <h3>Arnav Adepu</h3>
                             </div>
+                            <p><b>Biology Lead</b></p>
                             <div class="bio-text">
                                 <p></p>
                             </div>
